<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="socialtour_api_json">http://montesdehierro.com/pois.json</string>
    <string name="socialtour_api_comments">http://montesdehierro.com/comments.json?api_key=81c2MKQ9bl10y6h5158T43hq&amp;limit=5000</string>
    <string name="socialtour_api_ratings">http://montesdehierro.com/ratings.json</string>
    <string name="socialtour_api_events">http://montesdehierro.com/events.json?api_key=81c2MKQ9bl10y6h5158T43hq&amp;limit=5000</string>
    <string name="socialtour_api_photos">http://montesdehierro.com/photos.json?api_key=81c2MKQ9bl10y6h5158T43hq&amp;limit=5000</string>
    <string name="socialtour_url">http://montesdehierro.com</string>
    
    <string name="app_name">SocialTour</string>
    <string name="title_activity_map">MapActivity</string>
    <string name="menu_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>
    <string name="search">Search</string>
    <string name="right_slider">View right slider</string>
    <string name="side_menu_explorer">Explorer</string>
    <string name="side_menu_recommendations">Recomendaciones</string>
    <string name="side_menu_packages">Paquetes</string>
    <string name="side_menu_to_do_list">Cosas por hacer</string>
    <string name="side_menu_profile">Perfil</string>
    <string name="title_activity_social_tour_user_profile">SocialTourUserProfile</string>
    <string name="action_settings">Settings</string>
    <string name="title_map_fragment">MapFragment</string>
    <string name="recommended_activities">Actividades Recomendadas</string>
    <string name="category">Categoria:</string>
    
    <string name="layout_most_rated">Rutas</string>
    <string name="layout_specials">Destacados</string>
    <string name="layout_rating">Puntuación:</string>
    <string name="layout_rate">Puntuar sitio</string>
	<string name="layout_upload_photo">Subir foto</string>   
	<string name="layout_goto_maps">Ver en Google Maps</string>
	<string name="layout_images">Imágenes</string>
	<string name="layout_map">Mapa</string>
	<string name="layout_comments">Comentarios</string>
	<string name="layout_upload_comment">Añadir comentario</string>
	<string name="layout_create">Crear</string>
	<string name="layout_filter">Filtrar</string>
	<string name="layout_create_event">Nuevo evento</string>
	<string name="layout_create_poi">Nuevo sitio</string>
	<string name="layout_select">Seleccionar</string>
	<string name="layout_goto_poi">Pulsar para ver descripción.</string>
	<string name="layout_extend_view">Ver más</string>
	<string name="layout_show_video">Ver vídeo</string>
	<string name="layout_language">eu</string>
	<string name="layout_qr">Código QR</string>
	<string name="layout_language_string">Euskera</string> 
	
	<string name="no_info">La información no está disponible</string>

</resources>