<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#494949"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/side_navigation_menu_item1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/side_menu_explorer"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageViewProfile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slide_menu_divider" />

    <TextView
        android:id="@+id/side_navigation_menu_item2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/side_menu_profile"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slide_menu_divider" />

    <TextView
        android:id="@+id/side_navigation_menu_item3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/side_menu_packages"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slide_menu_divider" />

    <TextView
        android:id="@+id/side_navigation_menu_item4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/side_menu_recommendations"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slide_menu_divider" />

    <TextView
        android:id="@+id/side_navigation_menu_item5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="5dp"
        android:layout_marginTop="5dp"
        android:clickable="true"
        android:text="@string/side_menu_to_do_list"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textColor="#fff" />

    <ImageView
        android:id="@+id/imageView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/slide_menu_divider" />

</LinearLayout>