<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="#7a7a7a" >

    <LinearLayout
        android:id="@+id/LinearLayout1"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d2d2d2"
            android:padding="10dp" >

            <ImageView
                android:id="@+id/poiImage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="5dp"
                android:src="@drawable/sample_image" />

            <TextView
                android:id="@+id/poiTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:gravity="center_vertical"
                android:text="Medium Text"
                android:textAppearance="?android:attr/textAppearanceLarge" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/poiDescription"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:maxLines="12"
                android:text="TextView"
                android:textColor="#fff" />

            <TextView
                android:id="@+id/TextView01"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/layout_show_video"
                android:textColor="#fff"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/extendViewTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/layout_extend_view"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d2d2d2"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginRight="10dp"
                android:gravity="center"
                android:text="@string/layout_rating"
                android:textAppearance="?android:attr/textAppearanceMedium" />

            <RatingBar
                android:id="@+id/ratingBar1"
                style="?android:attr/ratingBarStyleIndicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout01"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/TextView02"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/layout_images"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Gallery
                android:id="@+id/gallery1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/uploadPhotoTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/layout_upload_photo"
                android:textColor="#7bc300"
                android:textStyle="bold"
                android:visibility="gone" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/linearLayout2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#d2d2d2"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/layout_comments"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/commentsTextView"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <TextView
                android:id="@+id/uploadComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/layout_upload_comment"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/LinearLayout03"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#ededed"
            android:orientation="vertical"
            android:padding="10dp" >

            <TextView
                android:id="@+id/TextView03"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:text="@string/layout_map"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <fragment
                android:id="@+id/poiMapFragment"
                android:layout_width="fill_parent"
                android:layout_height="180dp"
                android:layout_margin="10dp"
                class="com.google.android.gms.maps.SupportMapFragment" />

            <TextView
                android:id="@+id/TextView011"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:text="@string/layout_goto_maps"
                android:textColor="#fff"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</ScrollView>